--- a/components/Overview/Overview.module.scss
+++ b/components/Overview/Overview.module.scss
@@ -1,4 +1,4 @@
-@use "../../../styles/breakpoints.module.scss" as *;
+@use "../../styles/breakpoints.module.scss" as *;
 
 .contentWrapper {
     display: flex;
