--- a/components/DuckListing/DuckListing.module.scss
+++ b/components/DuckListing/DuckListing.module.scss
@@ -1,4 +1,4 @@
-@use "../../styles/breakpoints.module.scss" as *;
+@use "~@styles/breakpoints.module.scss" as *;
 
 .container {
     display: flex;
